--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>hola mundo!</h1>
-    <h2>cambios en el <html></html></h2>
+    <h2>cambios en el editable <html></html></h2>
 </body>
 </html>
