agregue un parrafo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>hola mundo!</h1>
-    <h2>cambios en el editable <html></html></h2>
+    <h2>cambios en el editable </h2>
+    <p>esto esta genial</p>
 </body>
 </html>
