--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PatoFelting - Inicio</title>
+    <style></style>
 </head>
 <body>
-    <h1>hola mundo!</h1>
-    <h2>cambios en el editable </h2>
-    <p>esto esta genial</p>
+    <h1>esto es pato PatoFelting</h1>
 </body>
 </html>
