--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PatoFelting - Inicio</title>
-    <style></style>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <h1>esto es pato PatoFelting</h1>
+    <h1>esto esPatoFelting</h1>
 </body>
 </html>
