--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,4 +45,32 @@
       </header>
     </div>
 </div>
+
+
+
+<section class="centrado">
+  <table>
+    <thead>
+      <tr>
+        <th>idArticulo</th>
+        <th>Nombre</th>
+        <th>Precio Unitario ($)</th>
+      </tr>
+    </thead>
+    <tbody id="datosArticulos"></tbody>
+    <tfoot>
+      <th>idArticulo</th>
+      <th>Nombre</th>
+      <th>Precio Unitario ($)</th>
+     
+    </tfoot>
+  </table>
+</section>
+
+
+
+
+
+<script src="js/index.js" type="module"></script>
+</body>
 </html>
