--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,7 +49,7 @@
     </div>
 </div>
 
-<div class=“iconsax” icon-name=“milk”></div>
+<i class=“iconsax” icon-name=“milk”></i>
 
 <section class="centrado">
   <table>
