modificamos index para traer imagen

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <th>idArticulo</th>
             <th>Nombre</th>
             <th>Precio Unitario ($)</th>
+            <th>imagen</th>
           </tr>
         </thead>
         <tbody id="datosArticulos"></tbody>
@@ -79,6 +80,8 @@
           <th>idArticulo</th>
           <th>Nombre</th>
           <th>Precio Unitario ($)</th>
+          <th>imagen</th>
+          
         </tfoot>
       </table>
     </section>
