cambios estilos en menu

--- a/index.html
+++ b/index.html
@@ -26,14 +26,11 @@
       href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;0,500;0,700;0,800;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+
 <!-- Iconos -->
 <script src="//glenthemes.github.io/iconsax/geticons.js"></script>
 <link href="//glenthemes.github.io/iconsax/style.css" rel="stylesheet">
 <link href="iconos/style.css" rel="stylesheet">
-
-
-
-
 
 
     <!-- Me enlazo a mi propia hoja de estilos -->
@@ -44,16 +41,19 @@
     <div class="fondoInicio">
       <div class="centrado">
         <header>
+          <div>
+            <i class="iconsax menuIconos" icon-name="sort"></i>
+          </div>
           <a href="index.html">
             <img
               src="img/logo_editado.png"
               alt="logo con descripción Pato felting fondo verde"
             />
           </a>
-         <div>
-          <i class="iconsax prueba" icon-name="heart"></i>
-          <i class="iconsax prueba" icon-name="basket-2"></i>
-          <i class="iconsax prueba" icon-name="user-2"></i>
+         <div class="mierda">
+          <i class="iconsax menuIconos" icon-name="heart"></i>
+          <i class="iconsax menuIconos" icon-name="basket-2"></i>
+          <i class="iconsax menuIconos" icon-name="user-2"></i>
         </div>
         </header>
       </div>
