--- a/index.html
+++ b/index.html
@@ -74,9 +74,15 @@
 
     <!-- --------------------------------------------SLIDER------------------------------------------------------------ -->
     <div>
-      <div>
-        <p>SLIDER</p>
-        <img src="" alt="" />
+      <div class="slider">
+        <p>
+          ¡Bienvenidos a Pato Felting! Aquí damos vida a encantadoras y únicas
+          figuras en felting. Ya sea para regalos, decoración o caprichos
+          personales, en 'Pato Felting' encontrarás algo especial. Además
+          ofrecemos encargos personalizados para crear piezas únicas según tus
+          gustos.
+        </p>
+        <p><a href="catalogo.html">Ver Tienda</a></p>
       </div>
       <div></div>
       <div></div>
@@ -89,26 +95,33 @@
     </section>
 
     <!-- --------------------------------------------SECCION OFERTAS-------------------------------------------------------->
-
-    <section class="centrado">
-      <h2>Ofertas</h2>
-      <div id="ofertas"></div>
-    </section>
-
-    <footer >
-      <div class="centrado">
-      <div class="teMail">
-        <i class="iconsax" icon-name="phone"></i>
-        <p>094 959 961</p>
-        <i class="iconsax" icon-name="mail"></i>
-        <p>pato.lop@gmail.com</p>
-      </div>
-      <div class="redes">
-        <a href=""><i class="iconsax menuIconos" icon-name="facebook"></i></a>
-        <a href=""><i class="iconsax menuIconos" icon-name="whatsapp"></i></a>
-        <a href=""><i class="iconsax menuIconos" icon-name="instagram"></i></a>
-      </div>
+    <div id="fondoOfertas">
+      <section class="centrado seccionOfertas">
+        <h2>Ofertas</h2>
+        <div id="ofertas"></div>
+      </section>
     </div>
+ <!-- --------------------------------------------FOOTER-------------------------------------------------------------------->
+    <footer>
+      <div class="centrado">
+        <div class="teMail">
+          <i class="iconsax" icon-name="phone"></i>
+          <p>094 959 961</p>
+          <i class="iconsax" icon-name="mail"></i>
+          <p>pato.lop@gmail.com</p>
+        </div>
+        <div class="redes">
+          <a href="https://www.facebook.com/PatoFelting/"
+            ><i class="iconsax menuIconos" icon-name="facebook"></i
+          ></a>
+          <a href="https://www.instagram.com/pato_felting/?hl=es"
+            ><i class="iconsax menuIconos" icon-name="instagram"></i
+          ></a>
+          <a href="https://wa.me/59894959961"
+            ><i class="iconsax menuIconos" icon-name="whatsapp"></i
+          ></a>
+        </div>
+      </div>
     </footer>
     <script src="js/index.js" type="module"></script>
   </body>
