funciona backend detalle articulo

--- a/detalle.html
+++ b/detalle.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="detalle">
+    <section class="datos" id="detalle">
 
     </section>
     <script src="js/detalle.js" type="module"></script>
