--- a/catalogo.html
+++ b/catalogo.html
@@ -49,6 +49,7 @@
               alt="logo con descripción Pato felting fondo verde"
             />
           </a>
+         
           <div class="menuDerecha">
             <i class="iconsax menuIconos" icon-name="heart"></i>
             <i class="iconsax menuIconos" icon-name="basket-2"></i>
@@ -80,49 +81,64 @@
     <section class="centrado" id="categorias"></section>
     <div class="centrado">
       <!-- -----------------------------------------SECCION FILTROS---------------------------------------------------------- -->
-      <section id="filtros">
-        <div class="fondoInicio">
-          <div>
-            <h2>Precio</h2>
-            <input type="text" />
-            <input type="text" />
+      <div class="dosSecciones ">
+        <section id="filtros" class="filtroMobile">
+          <div class="fondoInicio">
+            <div class="filtroPrecio">
+              <h2>Precio</h2>
+              <div>
+                <input type="number" id="prMinimo" placeholder="Mínimo" />
+                <input type="number" id="prMaximo"placeholder="Máximo" />
+              </div>
+            </div>
+            <div class="filtroTamaño">
+              <h2>Tamaño</h2>
+              <div>
+                <div>
+                  <input type="radio" name="tamaño" id="3_5cm" />
+                  <label for="3_5cm">3 cm - 5 cm</label>
+                </div>
+                <div>
+                  <input type="radio" name="tamaño" id="6_10cm" />
+                  <label for="6_10cm">6 cm - 10 cm</label>
+                </div>
+                <div>
+                  <input type="radio" name="tamaño" id="11_15cm" />
+                  <label for="11_15cm">11 cm - 15 cm</label>
+                </div>
+                <div>
+                  <input type="radio" name="tamaño" id="mas15cm" />
+                  <label for="mas15cm">más de 15 cm</label>
+                </div>
+              </div>
+            </div>
+            <div class="filtroDto">
+              <h2>Descuento</h2>
+              <div>
+                <input type="checkbox" name="descuento" id="descuento" />
+                <label for="descuento">Artículo con descuento</label>
+              </div>
+            </div>
           </div>
-          <div>
-            <h2>Tamaño</h2>
-
-            <input type="radio" name="tamaño" id="3 cm - 5 cm" />
-            <label for="3 cm - 5 cm">3 cm - 5 cm</label>
-            <input type="radio" name="tamaño" id="6 cm - 10 cm" />
-            <label for="6 cm - 10 cm">6 cm - 10 cm</label>
-            <input type="radio" name="tamaño" id="11 cm - 15 cm" />
-            <label for="11 cm - 15 cm">11 cm - 15 cm</label>
-            <input type="radio" name="tamaño" id="más de 15 cm" />
-            <label for="más de 15 cm">más de 15 cm</label>
-          </div>
-          <div>
-            <h2>Descuento</h2>
-            <input type="radio" name="descuento" id="descuento" />
-            <label for="descuento">Artículo con descuento</label>
-          </div>
-        </div>
-        <input type="button" value="Borrar todos" />
-      </section>
-      <!-- -----------------------------------------SECCION ARTICULOS FILTRADOS------------------------------------------------ -->
-      <section id="datosArticulos">
-        <article>
-          <figure>
-            <img src="" alt="" title="" />
-          </figure>
-          <h3>Nombre artículo</h3>
-          <div>
-            <p>Precio:</p>
-            <p>
-              <i class="iconsax prueba" icon-name="heart"></i>
-              <i class="iconsax prueba" icon-name="basket-2"></i>
-            </p>
-          </div>
-        </article>
-      </section>
+          <input type="button" value="Borrar todos" />
+        </section>
+        <!-- -----------------------------------------SECCION ARTICULOS FILTRADOS------------------------------------------------ -->
+        <section id="datosArticulos" class="articulos">
+          <article>
+            <figure>
+              <img src="" alt="" title="" />
+            </figure>
+            <h3>Nombre artículo</h3>
+            <div>
+              <p>Precio:</p>
+              <p>
+                <i class="iconsax prueba" icon-name="heart"></i>
+                <i class="iconsax prueba" icon-name="basket-2"></i>
+              </p>
+            </div>
+          </article>
+        </section>
+      </div>
     </div>
     <!-- --------------------------------------------FOOTER-------------------------------------------------------------------->
     <footer>
