--- a/catalogo.html
+++ b/catalogo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PatoFelting - Inicio</title>
+    <title>PatoFelting - Catalogo</title>
     <!-- enlazo fuentes de google chrome -->
 
     <!-- font Andada Pro -->
