correcion img no se veian, carrito terminado,checkout initial

--- a/detalle.html
+++ b/detalle.html
@@ -65,7 +65,7 @@
         <i class="iconsax menuIconos" icon-name="close-circle"></i>
       </button>
       <ul>
-        <li><a href="index.html" id="itemActivo">Home</a></li>
+        <li><a href="index.html" >Home</a></li>
         <li><a href="catalogo.html">Catálogo</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="personalizaciones.html">Personalizaciones</a></li>
