cambios con imagenes terminado checkout diseño

--- a/carrito.html
+++ b/carrito.html
@@ -78,6 +78,7 @@
     <!-- ------------------------------------------SECCION ARTICULO DE CARRITO---------------------------------------------- -->
 
     <section class="centrado carritoResumen">
+      
       <div class="artCarrito">
         <article>
           <figure>
@@ -90,7 +91,7 @@
             <div>
               <h3>Squirtle</h3>
               <div class="precioMobile">$1200</div>
-              <p>Tamaño: 3cm - 6cm</p>
+              <p>Tamaño: <span class="tamano">3cm - 6cm</span></p>
               <p>
                 Cantidad
                 <i class="iconsax menuIconos" icon-name="minus-circle"></i>
