--- a/checkout.html
+++ b/checkout.html
@@ -53,8 +53,9 @@
           </a>
           <div class="menuDerecha" id="checkout">
             <p>
-              Seguir comprando
+              <a href="catalogo.html" >Seguir comprando
               <i class="iconsax menuIconos" icon-name="chevron-right"></i>
+            </a>
             </p>
           </div>
         </header>
