--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
           </a>
           <div class="menuDerecha">
             <i class="iconsax menuIconos" icon-name="heart"></i>
-            <i class="iconsax menuIconos" icon-name="basket-2"></i>
-            <i class="iconsax menuIconos" icon-name="user-2"></i>
+            <a href="carrito.html"><div class="carrito">
+              <i class="iconsax menuIconos" icon-name="basket-2"></i>
+              <span class="numeroCarrito" id="numeroCarrito">0</span>            
+            </div>
+            </a>
+            <a href="login.html"><i class="iconsax menuIconos" icon-name="user-2"></i></a>
           </div>
         </header>
       </div>
