--- a/carrito.html
+++ b/carrito.html
@@ -79,7 +79,7 @@
 
     <section class="centrado carritoResumen">
       
-      <div class="artCarrito">
+      <div class="artCarrito" id="artCarrito">
         <article>
           <figure>
             <img
@@ -161,87 +161,8 @@
         <h2>También te puede interesar</h2>
         <hr />
       </div>
-      <div class="articulosVtaDetalle">
-        <article>
-          <div>
-            <figure>
-              <img
-                src="./img/detalleArticulo/Personajes/Squirtle/squirtle_1.jpeg"
-                alt=""
-              />
-            </figure>
-            <div>
-              <h3>Nombre Pokemon 1</h3>
-              <div class="precioIcono">
-                <p>Precio: $2000</p>
-                <div>
-                  <i class="iconsax menuIconos" icon-name="heart"></i>
-                  <i class="iconsax menuIconos" icon-name="basket-2"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article>
-          <div>
-            <figure>
-              <img
-                src="./img/detalleArticulo/Personajes/Squirtle/squirtle_1.jpeg"
-                alt=""
-              />
-            </figure>
-            <div>
-              <h3>Nombre Pokemon 2</h3>
-              <div class="precioIcono">
-                <p>Precio: $500</p>
-                <div>
-                  <i class="iconsax menuIconos" icon-name="heart"></i>
-                  <i class="iconsax menuIconos" icon-name="basket-2"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article>
-          <div>
-            <figure>
-              <img
-                src="./img/detalleArticulo/Personajes/Squirtle/squirtle_2.jpeg"
-                alt=""
-              />
-            </figure>
-            <div>
-              <h3>Nombre Pokemon 3</h3>
-              <div class="precioIcono">
-                <p>Precio: $200</p>
-                <div>
-                  <i class="iconsax menuIconos" icon-name="heart"></i>
-                  <i class="iconsax menuIconos" icon-name="basket-2"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article>
-          <div>
-            <figure>
-              <img
-                src="./img/detalleArticulo/Personajes/Squirtle/squirtle_3.jpg"
-                alt=""
-              />
-            </figure>
-            <div>
-              <h3>Nombre Pokemon 4</h3>
-              <div class="precioIcono">
-                <p>Precio: $6F00</p>
-                <div>
-                  <i class="iconsax menuIconos" icon-name="heart"></i>
-                  <i class="iconsax menuIconos" icon-name="basket-2"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
+      <div class="articulosVtaDetalle" id="articulosVtaDetalle">
+      
       </div>
     </section>
     <!-- --------------------------------------------FOOTER-------------------------------------------------------------------->
@@ -266,6 +187,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/index.js" type="module"></script>
+    <script src="js/carrito.js" type="module"></script>
   </body>
 </html>
