--- a/carrito.html
+++ b/carrito.html
@@ -140,7 +140,7 @@
         </div>
         <div class="subTotal">
           <p>Sub-Total:</p>
-          <p>$1200</p>
+          <p id="subTotalCarrito">$0</p>
         </div>
         <div class="envio">
           <p>Envío:</p>
@@ -149,9 +149,9 @@
         <hr />
         <div class="total">
           <p>Total:</p>
-          <p>$1400</p>
+          <p id="totalCarrito">$0</p>
         </div>
-        <input type="button" value="Procesar la compra" />
+        <input id="procesarCompra" type="button" value="Procesar la compra" />
       </div>
     </section>
     <!-- ------------------------------------------SECCION VENTA CRUZADA CARRITO-------------------------------------------- -->
